OP-471 Fixed labels and some logic

--- a/bundle/language_ar.properties
+++ b/bundle/language_ar.properties
@@ -327,11 +327,11 @@ angal.patvac.allvaccinetype                                                 = ك
 angal.patvac.count                                                          = احسب
 angal.patvac.datapatient                                                    = بيانات المريض
 angal.patvac.insertvalidage                                                 = ادرج عمر صالح
-angal.patvac.patientcode                                                    = كود المريض
 angal.patvac.pleaseinsertvaliddatefrom                                      = يرجى إدراج تاريخ صالح
 angal.patvac.pleaseinsertvaliddateto                                        = يرجى إدراج تاريخ صالح
 angal.patvac.progressive                                                    = التقدم
 angal.patvac.rowcounter                                                     = احسب
+angal.patvac.searchpatient                                                  = بحث المريض
 angal.patvac.selectapatient                                                 = اختر المريض
 angal.patvac.selectavaccine                                                 = حدد نوع اللقاح
 angal.patvac.selectavaccinetype                                             = حدد نوع اللقاح
