--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -1211,7 +1211,7 @@ angal.patvac.deletepatientvaccine.fmt.msg                                       
 angal.patvac.edipatientvaccine.title                                                                   = Edit Patient Vaccine
 angal.patvac.insertvalidage                                                                            = Insert valid age
 angal.patvac.newpatientvaccine.title                                                                   = New Patient Vaccine
-angal.patvac.patientcode                                                                               = Patient Code
+angal.patvac.patientcode.fmt.msg                                                                       = Patient (code: {0})
 angal.patvac.patientvaccinebrowser.title                                                               = Patient Vaccine Browser
 angal.patvac.pleaseinsertavalidprogressive.msg                                                         = Please insert a valid progressive.
 angal.patvac.pleaseinsertvaccinedate.msg                                                               = Please insert a vaccine date.
@@ -1220,6 +1220,7 @@ angal.patvac.pleaseinsertvaliddateto                                            
 angal.patvac.pleaseselectavaccine.msg                                                                  = Please select a vaccine.
 angal.patvac.progressive                                                                               = Progressive
 angal.patvac.rowcounter                                                                                = Count
+angal.patvac.searchpatient                                                                             = Search Patient
 angal.patvac.selectapatient                                                                            = Select a patient
 angal.patvac.selectavaccine                                                                            = Select a vaccine
 angal.patvac.selectavaccinetype                                                                        = Select a vaccine type
