--- a/bundle/language_es.properties
+++ b/bundle/language_es.properties
@@ -1211,7 +1211,7 @@ angal.patvac.deletepatientvaccine.fmt.msg                                       
 angal.patvac.edipatientvaccine.title                                                                   = Modificar Vacuna del Paciente
 angal.patvac.insertvalidage                                                                            = Digitar una edad vólida
 angal.patvac.newpatientvaccine.title                                                                   = Nueva Vacuna Paciente
-angal.patvac.patientcode                                                                               = Codigo Paciente
+angal.patvac.patientcode.fmt.msg                                                                       = Paciente (código: {0})
 angal.patvac.patientvaccinebrowser.title                                                               = Lista Vacunas del Paciente
 angal.patvac.pleaseinsertavalidprogressive.msg                                                         = Por favor introduzca un progresivo vólido.
 angal.patvac.pleaseinsertvaccinedate.msg                                                               = Por favor introduzca una fecha de vacunación.
@@ -1220,6 +1220,7 @@ angal.patvac.pleaseinsertvaliddateto                                            
 angal.patvac.pleaseselectavaccine.msg                                                                  = Por favor seleccionar una vacuna.
 angal.patvac.progressive                                                                               = Progresivo
 angal.patvac.rowcounter                                                                                = Contar
+angal.patvac.searchpatient                                                                             = Buscar Paciente
 angal.patvac.selectapatient                                                                            = Seleccionar un paciente
 angal.patvac.selectavaccine                                                                            = Seleccionar una vacuna
 angal.patvac.selectavaccinetype                                                                        = Seleccionar un tipo de vacuna
