--- a/bundle/language_fr.properties
+++ b/bundle/language_fr.properties
@@ -1211,7 +1211,7 @@ angal.patvac.deletepatientvaccine.fmt.msg                                       
 angal.patvac.edipatientvaccine.title                                                                   = Modifier Vaccin Patient
 angal.patvac.insertvalidage                                                                            = Insérer une âge valide
 angal.patvac.newpatientvaccine.title                                                                   = Nouvel Vaccin du Patient
-angal.patvac.patientcode                                                                               = Code du Patient
+angal.patvac.patientcode.fmt.msg                                                                       = Patient (code: {0})
 angal.patvac.patientvaccinebrowser.title                                                               = Liste Vaccins Patient
 angal.patvac.pleaseinsertavalidprogressive.msg                                                         = Veuillez insérer un progressif valide.
 angal.patvac.pleaseinsertvaccinedate.msg                                                               = Veuillez insérer la date du vaccin.
@@ -1220,6 +1220,7 @@ angal.patvac.pleaseinsertvaliddateto                                            
 angal.patvac.pleaseselectavaccine.msg                                                                  = Veuillez sélectionner un vaccin.
 angal.patvac.progressive                                                                               = Progressif
 angal.patvac.rowcounter                                                                                = Compter
+angal.patvac.searchpatient                                                                             = Chercher Patient
 angal.patvac.selectapatient                                                                            = Sélectionner un Patient
 angal.patvac.selectavaccine                                                                            = Sélectionnez un vaccin
 angal.patvac.selectavaccinetype                                                                        = Sélectionnez une typologie de vaccin
