--- a/bundle/language_it.properties
+++ b/bundle/language_it.properties
@@ -1211,7 +1211,7 @@ angal.patvac.deletepatientvaccine.fmt.msg                                       
 angal.patvac.edipatientvaccine.title                                                                   = Modifica Vaccino al Paziente
 angal.patvac.insertvalidage                                                                            = Inserire Età valida
 angal.patvac.newpatientvaccine.title                                                                   = Nuovo Vaccino al Paziente
-angal.patvac.patientcode                                                                               = Codice Paziente
+angal.patvac.patientcode.fmt.msg                                                                       = Paziente (codice: {0})
 angal.patvac.patientvaccinebrowser.title                                                               = Lista Paziente Vaccini
 angal.patvac.pleaseinsertavalidprogressive.msg                                                         = Per favore, inserire un progressivo valido.
 angal.patvac.pleaseinsertvaccinedate.msg                                                               = Per favore, inserire una data per il vaccino.
@@ -1220,6 +1220,7 @@ angal.patvac.pleaseinsertvaliddateto                                            
 angal.patvac.pleaseselectavaccine.msg                                                                  = Per favore, scegliere un vaccino.
 angal.patvac.progressive                                                                               = Progressivo
 angal.patvac.rowcounter                                                                                = Conteggio
+angal.patvac.searchpatient                                                                             = Cerca Paziente
 angal.patvac.selectapatient                                                                            = Selezionare un Paziente
 angal.patvac.selectavaccine                                                                            = Selezionare un vaccino
 angal.patvac.selectavaccinetype                                                                        = Selezionare una tipologia di vaccini
