--- a/bundle/language_pt.properties
+++ b/bundle/language_pt.properties
@@ -423,11 +423,11 @@ angal.patvac.allvaccinetype                                                 = To
 angal.patvac.count                                                          = Contagem
 angal.patvac.datapatient                                                    = Dados do paciente
 angal.patvac.insertvalidage                                                 = Inserir a idade válida
-angal.patvac.patientcode                                                    = Código do paciente
 angal.patvac.pleaseinsertvaliddatefrom                                      = Por favor, insira um válido de data
 angal.patvac.pleaseinsertvaliddateto                                        = Por favor, insira um válido até à data
 angal.patvac.progressive                                                    = Progressiva
 angal.patvac.rowcounter                                                     = Contagem
+angal.patvac.searchpatient                                                  = Paciente de pesquisa
 angal.patvac.selectapatient                                                 = Selecione um paciente
 angal.patvac.selectavaccine                                                 = Selecione uma vacina
 angal.patvac.selectavaccinetype                                             = Selecione um tipo de vacina
