--- a/bundle/language_sw.properties
+++ b/bundle/language_sw.properties
@@ -364,11 +364,11 @@ angal.patvac.allvaccinetype                                                 = Ki
 angal.patvac.count                                                          = Hesabu
 angal.patvac.datapatient                                                    = Data za Mgonjwa
 angal.patvac.insertvalidage                                                 = Pachika umri sahihi
-angal.patvac.patientcode                                                    = Mgonjwa Ishara
 angal.patvac.pleaseinsertvaliddatefrom                                      = kuingiza halali kuanzia tarehe
 angal.patvac.pleaseinsertvaliddateto                                        = kuingiza tarehe halali
 angal.patvac.progressive                                                    = Namba ya kuendelea mbele
 angal.patvac.rowcounter                                                     = Hesabu
+angal.patvac.searchpatient                                                  = Tafuta Mgonjwa
 angal.patvac.selectapatient                                                 = Chagua mgonjwa
 angal.patvac.selectavaccine                                                 = Chagua chanjo
 angal.patvac.selectavaccinetype                                             = Chagua aina ya chanjo ya
