OP-215 Small fixes for note field and report

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -333,6 +333,7 @@ angal.common.temperatureabbr.txt                                                
 angal.common.thecodeisalreadyinuse.msg                                                                 = The code is already in use.
 angal.common.thecodeistoolongmax1char.msg                                                              = The code is too long (max. 1 char).
 angal.common.thecodeistoolongmaxchars.fmt.msg                                                          = The code is too long (max. {0} chars).
+angal.common.thenoteistoolongmaxchars.fmt.msg                                                          = The note is too long (max. {0} chars).
 angal.common.thiscouldretrievealargeamountofdataproceed.msg                                            = This could retrieve a large amount of data, proceed?
 angal.common.thisvaluecannotbegreaterthan.fmt.msg                                                      = This value cannot be greater than {0}. 
 angal.common.thisvaluecannotbelessthan.fmt.msg                                                         = This value cannot be less than {0}. 
