--- a/bundle/language_es.properties
+++ b/bundle/language_es.properties
@@ -333,6 +333,7 @@ angal.common.temperatureabbr.txt                                                
 angal.common.thecodeisalreadyinuse.msg                                                                 = Este código ya está en uso.
 angal.common.thecodeistoolongmax1char.msg                                                              = El código es demasiado largo (máx. 1 carácter).
 angal.common.thecodeistoolongmaxchars.fmt.msg                                                          = El código es demasiado largo (máx. {0} caracteres).
+angal.common.thenoteistoolongmaxchars.fmt.msg                                                          = La nota es demasiado larga (máx. {0} caracteres).
 angal.common.thiscouldretrievealargeamountofdataproceed.msg                                            = Esto podría recuperar una gran cantidad de datos, proceder?
 angal.common.thisvaluecannotbegreaterthan.fmt.msg                                                      = Este valor no puede ser mayor que {0}.
 angal.common.thisvaluecannotbelessthan.fmt.msg                                                         = Este valor no puede ser inferior a {0}.
