--- a/bundle/language_fr.properties
+++ b/bundle/language_fr.properties
@@ -333,6 +333,7 @@ angal.common.temperatureabbr.txt                                                
 angal.common.thecodeisalreadyinuse.msg                                                                 = Le code est déjà utilisé.
 angal.common.thecodeistoolongmax1char.msg                                                              = Code trop long (max 1 caractère).
 angal.common.thecodeistoolongmaxchars.fmt.msg                                                          = Code trop long (max {0} caractères).
+angal.common.thenoteistoolongmaxchars.fmt.msg                                                          = Note trop long (max {0} caractères).
 angal.common.thiscouldretrievealargeamountofdataproceed.msg                                            = Cela pourrait récupérer une grande quantité de données, procéder?.
 angal.common.thisvaluecannotbegreaterthan.fmt.msg                                                      = Cette valeur ne peut pas être supérieure à {0}.
 angal.common.thisvaluecannotbelessthan.fmt.msg                                                         = Cette valeur ne peut pas être inférieure à {0}.
