--- a/bundle/language_it.properties
+++ b/bundle/language_it.properties
@@ -333,6 +333,7 @@ angal.common.temperatureabbr.txt                                                
 angal.common.thecodeisalreadyinuse.msg                                                                 = Il codice è già in uso.
 angal.common.thecodeistoolongmax1char.msg                                                              = Il codice è troppo lungo (max. 1 carattere).
 angal.common.thecodeistoolongmaxchars.fmt.msg                                                          = Il codice è troppo lungo (massimo {0} caratteri).
+angal.common.thenoteistoolongmaxchars.fmt.msg                                                          = La nota è troppo lunga (massimo {0} caratteri).
 angal.common.thiscouldretrievealargeamountofdataproceed.msg                                            = Questo potrebbe recuperare una grande quantità di dati, procedere?
 angal.common.thisvaluecannotbegreaterthan.fmt.msg                                                      = Questo valore non può essere maggiore di {0}.
 angal.common.thisvaluecannotbelessthan.fmt.msg                                                         = Questo valore non può essere inferiore a {0}.
