OP-591 disclose some "admin" features to other users (#824)

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -840,6 +840,8 @@ angal.medtype.editmedicaltype.title                                             
 angal.medtype.medicaltypebrowser.title                                                                 = Medical Type Browser
 angal.medtype.newmedicaltype.title                                                                     = New Medical Type
 angal.menu.accounting                                                                                  = Accounting
+angal.menu.accounting.cashiersfilter                                                                   = Cashier's Filter
+angal.menu.accounting.editclosedbills                                                                  = Edit Closed Bills
 angal.menu.admchart                                                                                    = Admission Chart
 angal.menu.admission                                                                                   = Admission/Patient
 angal.menu.admtype                                                                                     = AdmissionType
