--- a/bundle/language_it.properties
+++ b/bundle/language_it.properties
@@ -840,6 +840,8 @@ angal.medtype.editmedicaltype.title                                             
 angal.medtype.medicaltypebrowser.title                                                                 = Browser di Tipo Medico
 angal.medtype.newmedicaltype.title                                                                     = Nuovo Tipo Medico
 angal.menu.accounting                                                                                  = Contabilità
+angal.menu.accounting.cashiersfilter                                                                   = Filtra per cassiere
+angal.menu.accounting.editclosedbills                                                                  = Modifica conti già chiusi
 angal.menu.admchart                                                                                    = Report Ricovero
 angal.menu.admission                                                                                   = Gestione Paziente
 angal.menu.admtype                                                                                     = Tipologie Ricovero
