--- a/rpt/patient_clinical_sheet_ver3_es.properties
+++ b/rpt/patient_clinical_sheet_ver3_es.properties
@@ -2,6 +2,10 @@
 
 PatientClinicalSheet = FICHA CLÍNICA DEL PACIENTE
 
-ThisReportListAllTheAdmissionsAndLaboratoryExamsForThePatientMoreRecentInformationAsFirst = Este informe detalla todas las admisiones y exámenes de laboratorio del paciente, comenzando de la información más reciente
+ThisReportShowsPatientHistoryBetweenTwoDatesMoreRecentInformationAsFirst = Este informe muestra el historial del paciente entre dos fechas, la información más reciente como primera.
 
 Version = versión
+
+Report.from = Informe desde
+
+to = a
