--- a/rpt/patient_clinical_sheet_ver3_fr.properties
+++ b/rpt/patient_clinical_sheet_ver3_fr.properties
@@ -2,6 +2,10 @@
 
 PatientClinicalSheet = FICHE CLINIQUE PATIENT
 
-ThisReportListAllTheAdmissionsAndLaboratoryExamsForThePatientMoreRecentInformationAsFirst = ce rapport liste toutes les admissions et les examen de laboratoire du patient, informations plus récentes en premières
+ThisReportShowsPatientHistoryBetweenTwoDatesMoreRecentInformationAsFirst = Ce rapport montre l'historique du patient entre deux dates, les informations les plus récentes comme la première.
 
 Version = version
+
+Report.from = Rapport de
+
+to = à
