--- a/rpt/patient_clinical_sheet_ver3_it.properties
+++ b/rpt/patient_clinical_sheet_ver3_it.properties
@@ -2,6 +2,10 @@
 
 PatientClinicalSheet = SCHEDA CLINICA DEL PAZIENTE
 
-ThisReportListAllTheAdmissionsAndLaboratoryExamsForThePatientMoreRecentInformationAsFirst = questo rapporto elenca tutti i ricoveri e gli esami di laboratorio per il paziente, informazioni più recenti in testa
+ThisReportShowsPatientHistoryBetweenTwoDatesMoreRecentInformationAsFirst = Questo rapporto mostra la storia del paziente tra due date, le informazioni più recenti per prima.
 
 Version = versione
+
+Report.from = Da
+
+to = a
