OP-595 new button names/order

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -1109,6 +1109,8 @@ angal.operation.result.success.txt                                              
 angal.operation.result.undefined.txt                                                                   = Unknown
 angal.operation.selecttype                                                                             = Select type
 angal.operation.type                                                                                   = Type
+angal.operationrow.clear.btn                                                                           = Clear
+angal.operationrow.clear.btn.key                                                                       = L
 angal.operationrowedit.operation                                                                       = Operation
 angal.operationrowedit.remark                                                                          = Remarks
 angal.operationrowedit.saveerror                                                                       = Error occurs during processing 
