Chore: fix spelling

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -941,7 +941,7 @@ angal.menu.opdchart                                                             
 angal.menu.operation                                                                                   = Operation
 angal.menu.operationtype                                                                               = Operation
 angal.menu.otherprices                                                                                 = Other Prices
-angal.menu.patientvaccine                                                                              = Patient Vaccins
+angal.menu.patientvaccine                                                                              = Patient Vaccines
 angal.menu.patreport                                                                                   = Launch Report 
 angal.menu.pharmacy                                                                                    = Pharmacy
 angal.menu.pretreatmenttype                                                                            = PregnantTreatment
