OP-504 change 'Patient Vaccines' to 'Vaccines' in main menu

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -889,7 +889,7 @@ angal.menu.btn.opdchart                                                         
 angal.menu.btn.operation                                                                               = Operation
 angal.menu.btn.operationtype                                                                           = Operation Type
 angal.menu.btn.otherprices                                                                             = Other Prices
-angal.menu.btn.patientvaccine                                                                          = Patient Vaccines
+angal.menu.btn.patientvaccine                                                                          = Vaccines
 angal.menu.btn.patreport                                                                               = Launch Report 
 angal.menu.btn.pharmacy                                                                                = Pharmacy
 angal.menu.btn.pretreatmenttype                                                                        = Pregnant Treatment
