Changed "Cancel" to "Close" with changes monitor

--- a/bundle/language_fr.properties
+++ b/bundle/language_fr.properties
@@ -495,6 +495,7 @@ angal.examination.respiratoryrateabbr.col                                       
 angal.examination.respiratoryrateunit                                                                  = bpm
 angal.examination.saturation                                                                           = Saturation
 angal.examination.saturationabbr.col                                                                   = O2
+angal.examination.savethechanges.msg                                                                   = Enregistrer modification
 angal.examination.temperature                                                                          = Température
 angal.examination.temperatureabbr.col                                                                  = T
 angal.examination.title                                                                                = Examen Patient
