--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -495,6 +495,7 @@ angal.examination.respiratoryrateabbr.col                                       
 angal.examination.respiratoryrateunit                                                                  = bpm
 angal.examination.saturation                                                                           = Saturation
 angal.examination.saturationabbr.col                                                                   = O2
+angal.examination.savethechanges.msg                                                                   = Save the changes?
 angal.examination.temperature                                                                          = Temperature
 angal.examination.temperatureabbr.col                                                                  = T
 angal.examination.title                                                                                = Patient Examination
