--- a/bundle/language_es.properties
+++ b/bundle/language_es.properties
@@ -495,6 +495,7 @@ angal.examination.respiratoryrateabbr.col                                       
 angal.examination.respiratoryrateunit                                                                  = Unidad de frecuencia respiratoria
 angal.examination.saturation                                                                           = Saturación
 angal.examination.saturationabbr.col                                                                   = O2
+angal.examination.savethechanges.msg                                                                   = ¿Guardar los cambios?
 angal.examination.temperature                                                                          = Temperatura
 angal.examination.temperatureabbr.col                                                                  = T
 angal.examination.title                                                                                = Examen
