--- a/bundle/language_it.properties
+++ b/bundle/language_it.properties
@@ -495,6 +495,7 @@ angal.examination.respiratoryrateabbr.col                                       
 angal.examination.respiratoryrateunit                                                                  = apm
 angal.examination.saturation                                                                           = Saturazione
 angal.examination.saturationabbr.col                                                                   = O2
+angal.examination.savethechanges.msg                                                                   = Salva modifiche?
 angal.examination.temperature                                                                          = Temperatura
 angal.examination.temperatureabbr.col                                                                  = T
 angal.examination.title                                                                                = Esame del Paziente
