Fixes from review comments

--- a/bundle/language_ar.properties
+++ b/bundle/language_ar.properties
@@ -55,6 +55,8 @@ angal.common.delete                                                         = ح
 angal.common.edit                                                           = تعديل
 angal.common.minutes                                                        = الدقائق
 angal.common.minutesabbr                                                    = الدقائق
+angal.common.page.range.fmt                                                 = صفحة {0} / {1}
+angal.common.pagesize.label                                                 = مقاس الصفحه:
 angal.common.patientID                                                      = رقم تعريف المريض
 angal.common.save                                                           = حفظ
 angal.dicom.delete.no                                                       = لا
