--- a/bundle/language_es.properties
+++ b/bundle/language_es.properties
@@ -297,6 +297,8 @@ angal.common.note.title                                                         
 angal.common.note.txt                                                                                  = Notas
 angal.common.ok.btn                                                                                    = OK
 angal.common.ok.btn.key                                                                                = O
+angal.common.page.range.fmt                                                                            = Página {0} / {1}
+angal.common.pagesize.label                                                                            = Paginación
 angal.common.patient.txt                                                                               = Paciente
 angal.common.patientID                                                                                 = ID.Pac.
 angal.common.pleaseinsertacode.msg                                                                     = Introduzca un código.
