--- a/bundle/language_it.properties
+++ b/bundle/language_it.properties
@@ -297,6 +297,8 @@ angal.common.note.title                                                         
 angal.common.note.txt                                                                                  = Nota
 angal.common.ok.btn                                                                                    = OK
 angal.common.ok.btn.key                                                                                = O
+angal.common.page.range.fmt                                                                            = Pagina {0} / {1}
+angal.common.pagesize.label                                                                            = Paginazione:
 angal.common.patient.txt                                                                               = Paziente
 angal.common.patientID                                                                                 = ID Paz.
 angal.common.pleaseinsertacode.msg                                                                     = Si prega di inserire un codice.
