--- a/bundle/language_pt.properties
+++ b/bundle/language_pt.properties
@@ -57,6 +57,8 @@ angal.common.edit                                                           = Ed
 angal.common.hours                                                          = Horas
 angal.common.minutes                                                        = Minutos
 angal.common.minutesabbr                                                    = Min
+angal.common.page.range.fmt                                                 = Página {0} / {1}
+angal.common.pagesize.label                                                 = Paginação
 angal.common.patientID                                                      = ID.Pac.
 angal.common.save                                                           = Salvar
 angal.common.uom.bpm                                                        = bpm
