--- a/bundle/language_zh_CN.properties
+++ b/bundle/language_zh_CN.properties
@@ -30,3 +30,5 @@ angal.admission.delivery.title                         = 康复（Delivery)
 angal.admission.deliverydate.border                    = 康复（Delivery)日期
 angal.admission.deliveryresultype.border               = 康复（Delivery)原因及类型
 angal.admission.deliverytype.border                    = 康复（Delivery)类型
+angal.common.page.range.fmt                            = 页 {0} / {1}
+angal.common.pagesize.label                            = 页面大小：
