--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -291,20 +291,21 @@ angal.common.new.btn                                                            
 angal.common.new.btn.key                                                                               = N
 angal.common.newpatient.btn                                                                            = New Patient
 angal.common.newpatient.btn.key                                                                        = N
-angal.common.nextpage                                                                                  = Next Page
 angal.common.notapplicable.txt                                                                         = N/A
 angal.common.notdefined.txt                                                                            = N/D
 angal.common.note.title                                                                                = Note
 angal.common.note.txt                                                                                  = Note
 angal.common.ok.btn                                                                                    = OK
 angal.common.ok.btn.key                                                                                = O
+angal.common.page.range.fmt                                                                            = Page {0} / {1}
+angal.common.page.range.fmt.txt                                                                        = Page
+angal.common.pagesize.label                                                                            = Page Size:
 angal.common.patient.txt                                                                               = Patient
 angal.common.patientID                                                                                 = Pat. ID
 angal.common.pleaseinsertacode.msg                                                                     = Please insert a code.
 angal.common.pleaseinsertavaliddescription.msg                                                         = Please insert a valid description.
 angal.common.pleaseselectapatient.msg                                                                  = Please select a patient.
 angal.common.pleaseselectarow.msg                                                                      = Please select a row.
-angal.common.previouspage                                                                              = Previous Page
 angal.common.print.btn                                                                                 = Print
 angal.common.print.btn.key                                                                             = P
 angal.common.qty.txt                                                                                   = Qty
@@ -1081,7 +1082,6 @@ angal.opd.opdnumberalreadyexist.msg                                             
 angal.opd.opdnumbermustbeanumber.msg                                                                   = OPD No. must be a number.
 angal.opd.opdoutpatientdepartment.title                                                                = OPD Out Patient Department
 angal.opd.operation                                                                                    = Operation
-angal.opd.pagenumber                                                                                   = Page Number
 angal.opd.patientcode.fmt.msg                                                                          = Patient (code: {0})
 angal.opd.patientid.col                                                                                = PAT. ID
 angal.opd.patientstatus.col                                                                            = Status
