--- a/bundle/language_fr.properties
+++ b/bundle/language_fr.properties
@@ -297,6 +297,8 @@ angal.common.note.title                                                         
 angal.common.note.txt                                                                                  = Remarque
 angal.common.ok.btn                                                                                    = OK
 angal.common.ok.btn.key                                                                                = O
+angal.common.page.range.fmt                                                                            = Page {0} / {1}
+angal.common.pagesize.label                                                                            = Taille:
 angal.common.patient.txt                                                                               = Patient
 angal.common.patientID                                                                                 = ID.Pat
 angal.common.pleaseinsertacode.msg                                                                     = Veuillez insérer un code.
