OP-633 Split titles in two lines, also add missing title

--- a/rpt/BillsReport_fr.properties
+++ b/rpt/BillsReport_fr.properties
@@ -16,7 +16,8 @@ Paid = Payé
 
 Patient = Patient
 
-Periodical.Incomes.Billed.And.Receivables.Report.All.Invoices = Rapport periodique Entrées/Facturé et Recevables (toutes les factures)
+Periodical.Incomes.Billed.And.Receivables.Report = Rapport periodique Entrées/Facturé et Recevables
+All.Invoices = (toutes les factures)
 
 Receivables = RECEVABLES
 
