--- a/rpt/BillsReportMonthly_es.properties
+++ b/rpt/BillsReportMonthly_es.properties
@@ -10,4 +10,7 @@ Receivable = Créditos
 
 Report.From = Informe desde
 
-To = A
+To = a
+
+Periodical.Incomes.Billed.And.Receivables.Report = Listado de ingresos poriodicos/Facturados y créditos
+Month.Summary = (resumen mensual)
