--- a/rpt/BillsReportMonthly_fr.properties
+++ b/rpt/BillsReportMonthly_fr.properties
@@ -10,4 +10,7 @@ Receivable = Recevable
 
 Report.From = Rapport de
 
-To = A
+To = a
+
+Periodical.Incomes.Billed.And.Receivables.Report = Rapport periodique Entrées/Facturé et Recevables
+Month.Summary = (resumé mensuel)
