--- a/rpt/BillsReportMonthly_it.properties
+++ b/rpt/BillsReportMonthly_it.properties
@@ -10,4 +10,7 @@ Receivable = Crediti
 
 Report.From = Da
 
-To = A
+To = a
+
+Periodical.Incomes.Billed.And.Receivables.Report = Report periodico Incasso, Fatturato e Crediti
+Month.Summary = (riassunto mensile)
