--- a/bundle/language_ar.properties
+++ b/bundle/language_ar.properties
@@ -166,6 +166,7 @@ angal.medicalstockward.insertvalidage                                       = إ
 angal.medicalstockward.medical                                              = دواء
 angal.medicalstockward.outcomes                                             = النتائج
 angal.medicalstockward.packets                                              = الحزم
+angal.medicalstockward.packets.fmt                                          = {0} الحزم
 angal.medicalstockward.pieces                                               = قطعة
 angal.medicalstockward.pleaseselectanoutcomesmovementfirst                  = يرجى تحديد حركة مخرجات الأولى
 angal.medicalstockward.rectify.instock                                      = في المخزن
