--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -772,11 +772,12 @@ angal.medicalstockward.newlot.btn                                               
 angal.medicalstockward.newlot.btn.key                                                                  = N
 angal.medicalstockward.outcomes                                                                        = Outcomes
 angal.medicalstockward.packets                                                                         = packets
+angal.medicalstockward.packets.fmt                                                                     = {0} packets
 angal.medicalstockward.patient.date.col                                                                = Date
 angal.medicalstockward.patient.drug.col                                                                = Drug
 angal.medicalstockward.patient.quantity.col                                                            = Quantity
 angal.medicalstockward.patient.units.col                                                               = Units
-angal.medicalstockward.pieces                                                                          = \ pieces
+angal.medicalstockward.pieces                                                                          = pieces
 angal.medicalstockward.pleaseselectanoutcomesmovementfirst                                             = Please select an Outcomes movement first
 angal.medicalstockward.rectify.actualquantity                                                          = Actual Quantity
 angal.medicalstockward.rectify.btn                                                                     = Rectify
