--- a/bundle/language_es.properties
+++ b/bundle/language_es.properties
@@ -772,6 +772,7 @@ angal.medicalstockward.newlot.btn                                               
 angal.medicalstockward.newlot.btn.key                                                                  = L
 angal.medicalstockward.outcomes                                                                        = Salidas
 angal.medicalstockward.packets                                                                         = Paquetes
+angal.medicalstockward.packets.fmt                                                                     = {0} paquetes
 angal.medicalstockward.patient.date.col                                                                = Fecha
 angal.medicalstockward.patient.drug.col                                                                = Fármaco
 angal.medicalstockward.patient.quantity.col                                                            = Cantidad
