--- a/bundle/language_fr.properties
+++ b/bundle/language_fr.properties
@@ -772,6 +772,7 @@ angal.medicalstockward.newlot.btn                                               
 angal.medicalstockward.newlot.btn.key                                                                  = N
 angal.medicalstockward.outcomes                                                                        = Sorties
 angal.medicalstockward.packets                                                                         = paquets
+angal.medicalstockward.packets.fmt                                                                     = {0} paquets
 angal.medicalstockward.patient.date.col                                                                = Date
 angal.medicalstockward.patient.drug.col                                                                = Drug
 angal.medicalstockward.patient.quantity.col                                                            = Quantité
