--- a/bundle/language_pt.properties
+++ b/bundle/language_pt.properties
@@ -231,6 +231,7 @@ angal.medicalstockward.insertvalidage                                       = In
 angal.medicalstockward.medical                                              = Médica
 angal.medicalstockward.outcomes                                             = Saídas
 angal.medicalstockward.packets                                              = pacotes
+angal.medicalstockward.packets.fmt                                          = {0} pacotes
 angal.medicalstockward.pieces                                               = pieces
 angal.medicalstockward.pleaseselectanoutcomesmovementfirst                  = Selecione primeiro um movimento de resultados
 angal.medicalstockward.rectify.actualquantity                               = Quantidade real
