--- a/bundle/language_sw.properties
+++ b/bundle/language_sw.properties
@@ -195,6 +195,7 @@ angal.medicalstockward.insertvalidage                                       = We
 angal.medicalstockward.medical                                              = Dawa
 angal.medicalstockward.outcomes                                             = Zinazotoka
 angal.medicalstockward.packets                                              = pakiti
+angal.medicalstockward.packets.fmt                                          = {0} pakiti
 angal.medicalstockward.pleaseselectanoutcomesmovementfirst                  = Tafadhali chagua muendelezo wa Zinazotoka kwanza
 angal.medicalstockward.rectify.instock                                      = kuwepo
 angal.medicalstockward.rectify.medical                                      = Utabibu
