--- a/bundle/language_it.properties
+++ b/bundle/language_it.properties
@@ -772,6 +772,7 @@ angal.medicalstockward.newlot.btn                                               
 angal.medicalstockward.newlot.btn.key                                                                  = N
 angal.medicalstockward.outcomes                                                                        = Uscite
 angal.medicalstockward.packets                                                                         = Pacchi
+angal.medicalstockward.packets.fmt                                                                     = {0} pacchi
 angal.medicalstockward.patient.date.col                                                                = Data
 angal.medicalstockward.patient.drug.col                                                                = Farmaco
 angal.medicalstockward.patient.quantity.col                                                            = Quantità
